--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@practical-angular/local-storage": "^15.0.2-alpha1",
     "angular-auth-oidc-client": "15.0.2",
     "angular-odata": "^0.115.0",
     "rxjs": "~7.5.0",
