--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular-devkit/build-angular": "^15.0.1",
     "@angular/cli": "~15.0.1",
     "@angular/compiler-cli": "^15.0.0",
+    "@microsoft/microsoft-graph-types-beta": "^0.29.0-preview",
     "@types/jasmine": "~4.3.0",
     "@types/microsoft-graph": "^2.24.0",
     "dotenv": "^16.0.3",
