--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/cli": "~15.0.5",
     "@angular/compiler-cli": "^15.0.4",
     "@microsoft/microsoft-graph-types-beta": "^0.29.0-preview",
+    "@ngneat/spectator": "^13.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/microsoft-graph": "^2.24.0",
     "dotenv": "^16.0.3",
