--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 CLIENT_ID=00000000-0000-0000-0000-111111111111
 TENANT_ID=00000000-0000-0000-0000-111111111111
+FOLLOWINGS_API_URL=https://storage.azurewebsites.net/api/followings
