--- a/package.json
+++ b/package.json
@@ -21,28 +21,28 @@
     "@angular/platform-browser": "^17.0.8",
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
-    "@practical-angular/local-storage": "^15.0.2-alpha1",
-    "angular-auth-oidc-client": "15.0.2",
+    "@practical-angular/local-storage": "^17.0.0-alpha.1",
+    "angular-auth-oidc-client": "^16.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^16.0.1",
+    "@angular-builders/custom-webpack": "^17.0.0",
     "@angular-devkit/build-angular": "^17.0.9",
     "@angular/cli": "~17.0.9",
     "@angular/compiler-cli": "^17.0.8",
-    "@microsoft/microsoft-graph-types-beta": "^0.29.0-preview",
-    "@ngneat/spectator": "^13.0.0",
-    "@types/jasmine": "~4.3.0",
-    "@types/microsoft-graph": "^2.24.0",
-    "dotenv": "^16.0.3",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
+    "@microsoft/microsoft-graph-types-beta": "^0.42.0-preview",
+    "@ngneat/spectator": "^16.0.0",
+    "@types/jasmine": "^5.1.4",
+    "@types/microsoft-graph": "^2.40.0",
+    "dotenv": "^16.3.1",
+    "jasmine-core": "^5.1.1",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "typescript": "~5.2.2"
   }
 }
