--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser": "^19.1.4",
     "@angular/platform-browser-dynamic": "^19.1.4",
     "@angular/router": "^19.1.4",
-    "angular-auth-oidc-client": "^16.0.1",
-    "angular-odata": "^0.126.0",
-    "rxjs": "~7.5.0",
+    "angular-auth-oidc-client": "^19.0.0",
+    "angular-odata": "^0.130.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -31,8 +31,8 @@
     "@angular-devkit/build-angular": "^19.1.5",
     "@angular/cli": "~19.1.5",
     "@angular/compiler-cli": "^19.1.4",
-    "@microsoft/microsoft-graph-types-beta": "^0.42.0-preview",
-    "@ngneat/spectator": "^16.0.0",
+    "@microsoft/microsoft-graph-types-beta": "^0.43.0-preview",
+    "@ngneat/spectator": "^19.4.1",
     "@types/jasmine": "^5.1.4",
     "@types/microsoft-graph": "^2.40.0",
     "dotenv": "^16.3.1",
